MKStoreKit configuration for VDI.

--- a/MKStoreKitConfigs.plist
+++ b/MKStoreKitConfigs.plist
@@ -3,23 +3,15 @@
 <plist version="1.0">
 <dict>
 	<key>Consumables</key>
-	<dict>
-		<key>com.steinlogic.iap6test.consumable</key>
-		<dict>
-			<key>Count</key>
-			<integer>500</integer>
-			<key>Name</key>
-			<string>EggBasket</string>
-		</dict>
-	</dict>
+	<dict/>
 	<key>Non-Consumables</key>
-	<array>
-		<string>com.steinlogic.iap6test.nonconsumable</string>
-	</array>
+	<array/>
 	<key>Subscriptions</key>
 	<dict>
-		<key>com.steinlogic.iap6test.autorenew</key>
-		<integer>7</integer>
+		<key>com.TimelessVeterinary.VetDrugIndex.BasicSubscription</key>
+		<integer>1</integer>
+		<key>com.TimelessVeterinary.VetDrugIndex.BasicSubscription.7Days</key>
+		<integer>1</integer>
 	</dict>
 </dict>
 </plist>
